--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Документ без названия</title>
+<title>Cherry Online</title>
 <link href="css/jqcart.css" rel="stylesheet" type="text/css">
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="js/jqcart.min.js"></script>
