--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ $(function(){
             </div>
           </section>
         </div>
-        <div class="content-width">
+        <div class="wrapper">
+          <div class="content-width">
             <section id="advantages">
                   <div class="tit bold bordo">
                       Почему выбирают нас?
@@ -150,7 +151,8 @@ $(function(){
                       Экологически чистая
                       </div>
                   </div>    
-          </section>
+            </section>
+          </div>  
         </div>
         <div class="wrapper">
           <section id="we">
@@ -169,42 +171,44 @@ $(function(){
             </div>
           </section>
         </div>
-<div class="content-width">
-  <section id="product">
-    <div class="tit bold bordo">
-        Наши сладкие ягоды 
-    </div>
-                  
-    <div class="icons clearfix">
-      <div class="item_box lefter aligner">
-        <img src="img/bagira.png" class="aligner" alt="">
-        <h3 class="item_title">Багира Булат</h3>
-        <p>Цена: <span class="item_price aligner">50</span>грн/кг</p>
-        <button class="add_item button_grey_small aligner" data-id="4" data-title="Багира Булат" data-price="50" data-img="https://www.dropbox.com/s/dlmlrfjno99xnyp/bagira.png?dl=0" data-count="100500">Добавить в корзину</button>
-        <p>
-          <button class="open button_bordo_small">Заказать</button>
-        </p>
+<div class="wrapper">
+  <div class="content-width">
+    <section id="product">
+      <div class="tit bold bordo">
+          Наши сладкие ягоды 
       </div>
-      <div class="item_box lefter aligner">
-        <img src="img/general.png"  alt="" >
-        <h3 class="item_title">Генеральская Желтая</h3>
-        <p>Цена: <span class="item_price aligner">47</span>грн/кг</p>
-        <button class="add_item button_grey_small aligner" data-id="5" data-title="Генеральская Желтая" data-price="47" data-img="https://www.dropbox.com/s/w9hevdnqgx6l3fd/general.png?dl=0">Добавить в корзину</button>
-        <p>
-          <button class="open button_bordo_small">Заказать</button>
-        </p>
+                    
+      <div class="icons clearfix">
+        <div class="item_box lefter aligner">
+          <img src="img/bagira.png" class="aligner" alt="">
+          <h3 class="item_title">Багира Булат</h3>
+          <p>Цена: <span class="item_price aligner">50</span>грн/кг</p>
+          <button class="add_item button_grey_small aligner" data-id="4" data-title="Багира Булат" data-price="50" data-img="https://www.dropbox.com/s/dlmlrfjno99xnyp/bagira.png?dl=0" data-count="100500">Добавить в корзину</button>
+          <p>
+            <button class="open button_bordo_small">Заказать</button>
+          </p>
+        </div>
+        <div class="item_box lefter aligner">
+          <img src="img/general.png"  alt="" >
+          <h3 class="item_title">Генеральская Желтая</h3>
+          <p>Цена: <span class="item_price aligner">47</span>грн/кг</p>
+          <button class="add_item button_grey_small aligner" data-id="5" data-title="Генеральская Желтая" data-price="47" data-img="https://www.dropbox.com/s/w9hevdnqgx6l3fd/general.png?dl=0">Добавить в корзину</button>
+          <p>
+            <button class="open button_bordo_small">Заказать</button>
+          </p>
+        </div>
+        <div class="item_box lefter alirner">
+          <img src="img/napoleon.png" class="aligner" alt="">
+          <h3 class="item_title">Наполеон</h3>
+          <p>Цена: <span class="item_price">47</span>грн/кг</p>
+          <button class="add_item button_grey_small aligner" data-id="6" data-title="Наполеон" data-price="47" data-img="https://www.dropbox.com/s/svefsyjq9gk440q/napoleon.png?dl=0g">Добавить в корзину</button>
+          <p>
+            <button class="open button_bordo_small aligner">Заказать</button>
+          </p>
+        </div>
       </div>
-      <div class="item_box lefter alirner">
-        <img src="img/napoleon.png" class="aligner" alt="">
-        <h3 class="item_title">Наполеон</h3>
-        <p>Цена: <span class="item_price">47</span>грн/кг</p>
-        <button class="add_item button_grey_small aligner" data-id="6" data-title="Наполеон" data-price="47" data-img="https://www.dropbox.com/s/svefsyjq9gk440q/napoleon.png?dl=0g">Добавить в корзину</button>
-        <p>
-          <button class="open button_bordo_small aligner">Заказать</button>
-        </p>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>  
 </div>
 <div class="wrapper">
   <section id="feedback">
@@ -239,7 +243,8 @@ $(function(){
       </div>
   </section>
 </div>
-<div class="content-width">
+<div class="wrapper">
+  <div class="content-width">
     <section id="principles">
           <div class="tit bold bordo">
               Принципы работы
@@ -281,6 +286,7 @@ $(function(){
             Как нас найти
           </div>
     </section>
+  </div>  
 </div>
 
 <div id="map"></div>
