--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@ $(function(){
   </div>  
 </div>
 
-<div id="map"></div>
+<div class="wrapper"><div id="map"></div>
+</div>
 <script>
 
         // This example displays a marker at the center of Australia.
