--- a/index.html
+++ b/index.html
@@ -289,8 +289,9 @@ $(function(){
   </div>  
 </div>
 
-<div class="wrapper"><div id="map"></div>
-</div>
+<div class="wrapper">
+  <div id="map"></div>
+
 <script>
 
         // This example displays a marker at the center of Australia.
@@ -329,6 +330,7 @@ $(function(){
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwPKxv04KdJ3zi7cNvWyKOkI6vrAV86Vk&callback=initMap">
     </script>
+</div>
 
 <div class="wrapper">
   <section id="footter">
