--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         #map {
           height: 100%;
           margin-top: 50px;
+          max-width: 1366px;
+          margin: 0 auto;
           
         }
         /* Optional: Makes the sample page fill the window. */
@@ -289,8 +291,8 @@ $(function(){
   </div>  
 </div>
 
-<div class="wrapper">
-  <div id="map"></div>
+
+<div id="map"></div>
 
 <script>
 
@@ -330,7 +332,7 @@ $(function(){
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwPKxv04KdJ3zi7cNvWyKOkI6vrAV86Vk&callback=initMap">
     </script>
-</div>
+
 
 <div class="wrapper">
   <section id="footter">
