--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
         #map {
-          height: 700px;
+          height: 100%;
           margin-top: 50px;
           
           
