--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         #map {
           height: 100%;
           margin-top: 50px;
-          
+          max-width: 1366px;         
           
         }
         /* Optional: Makes the sample page fill the window. */
