--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         #map {
           height: 100%;
           margin-top: 50px;
-          max-width: 1366px;         
+          max-width: 1366px; 
+          margin: 0 auto;        
           
         }
         /* Optional: Makes the sample page fill the window. */
