--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         /* Always set the map height explicitly to define the size of the div
          * element that contains the map. */
         #map {
-          height: 100%;
+          height: 700px;
           margin-top: 50px;
           max-width: 1366px; 
           margin: 0 auto;        
