--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ $(function(){
                           <div class="post_otzivy">
                               <img src="img/otziv1.png" alt="Svetlana" class="lefting"></img> 
                                   Спасибо большое за качество и оперативность доставки. Уже несколько раз заказывала черешню своим детям. Все просто шикарно - быстро, четко.<br><br>
-                                  Светдана, домохозяйка
+                                  <b>Светдана, домохозяйка</b>
                               
                           </div>
                       </div>
@@ -233,7 +233,7 @@ $(function(){
                           <div class="post_otzivy">
                               <img src="img/otziv2.png" alt="Marina" class="lefting"></img> 
                                   Большое спасибо! Все привезли вовремя, товар хорошего качества.<br><br>
-                                  Марина, офис-менеджер
+                                  <b>Марина, офис-менеджер</b>
                           
                           </div>
                       </div>
